# simple-bash-plugin

./: README.md  captain_planet.py  pyproject.toml
recipe/: meta.yaml
shell_script/: conda.sh
tests/: test_activate.py  test_activate_plugin.py
